print full test